moved root to conform to github pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <nav>
   <div class="container nav-inner">
-    <a href="/" class="logo">Lucas Noormamode</a>
+    <a href="/static" class="logo">Lucas Noormamode</a>
     <div class="nav-links">
       <a href="https://github.com/LSNoor/lsnoor.github.io" target="_blank">GitHub</a>
       <a href="mailto:lucnoor@gmail.com">Contact</a>
@@ -35,7 +35,7 @@
   </div>
   
   <div class="hero-image">
-    <img src="./static/lucas_noormamode.png" alt="Lucas Noormamode">
+    <img src="staticucas_noormamode.png" alt="Lucas Noormamode">
   </div>
 </div>
 
