--- a/projects/TGN.html
+++ b/projects/TGN.html
@@ -10,7 +10,7 @@
 
 <nav>
   <div class="container nav-inner">
-    <a href="/" class="logo">yourname</a>
+    <a href="/static" class="logo">yourname</a>
     <div class="nav-links">
       <a href="https://github.com/yourusername" target="_blank">GitHub</a>
       <a href="mailto:you@email.com">Contact</a>
@@ -19,7 +19,7 @@
 </nav>
 
 <div class="container" style="padding: 3rem 0 5rem;">
-  <a class="back" href="/">← back</a>
+  <a class="back" href="/static">← back</a>
   <div class="article-header">
     <h1>Project One</h1>
     <div class="meta">Jan 2026</div>
