--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   
   <div class="hero-image">
-    <img src="staticucas_noormamode.png" alt="Lucas Noormamode">
+    <img src="static/lucas_noormamode.png" alt="Lucas Noormamode">
   </div>
 </div>
 
