added plasma control page

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <title>Lucas Noormamode</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
 <nav>
   <div class="container nav-inner">
-    <a href="/static" class="logo">Lucas Noormamode</a>
+    <a href="index.html" class="logo">Lucas Noormamode</a>
     <div class="nav-links">
       <a href="https://github.com/LSNoor/lsnoor.github.io" target="_blank">GitHub</a>
       <a href="mailto:lucnoor@gmail.com">Contact</a>
@@ -23,7 +23,7 @@
   <div class="hero-content">
     <h1>Lucas Noormamode</h1>
 
-    <p>I am a lead Research engineer working at <a href="https://dragonfly.comet.tech/">Dragonfly
+    <p>I am a lead research engineer working at <a href="https://dragonfly.comet.tech/">Dragonfly
     </a> as part of the AI agent team.</p>
 
     <p>My current work involves designing, evaluating and improving the sequential decision-making of our software automations.
@@ -40,12 +40,14 @@
 </div>
 
 <div class="container" style="padding-bottom:4rem;">
-  <div class="section-label">Latest Projects</div>
+  <div class="section-label">Pinned Projects</div>
 
-  <a class="project" href="/projects/project-one">
-    <h3>Implementation of the Temporal Graph Network (TGN) paper.</h3>
-    <p>I wanted to implement this seminal paper from scratch to have an in depth understand of its architecture.</p>
-    <div class="tags"><span class="tag">Pytorch</span><span class="tag">Temporal Graph Networks</span></div>
+  <a class="project" href="projects/Plasma%20Control%20Project.html">
+    <h3>Plasma Control Project.</h3>
+    <p>A research project that I joined as an intern and then continued as a full-time employee at Comet. In partnership
+      with the California lab.
+      Involves machine control using RL and active learning.</p>
+    <div class="tags"><span class="tag">Reinforcement Learning</span><span class="tag">Active Learning</span></div>
   </a>
 
 <footer>© 2026 Lucas Noormamode</footer>
