--- a/projects/TGN.html
+++ b/projects/TGN.html
@@ -3,23 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project One — Your Name</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <title>Lucas Noormamode</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
 <nav>
   <div class="container nav-inner">
-    <a href="/static" class="logo">yourname</a>
+    <a href="../index.html" class="logo">Lucas Noormamode</a>
     <div class="nav-links">
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-      <a href="mailto:you@email.com">Contact</a>
+      <a href="https://github.com/LSNoor/lsnoor.github.io" target="_blank">GitHub</a>
+      <a href="mailto:lucnoor@gmail.com">Contact</a>
     </div>
   </div>
 </nav>
 
 <div class="container" style="padding: 3rem 0 5rem;">
-  <a class="back" href="/static">← back</a>
+  <a class="back" href="../index.html">← back</a>
   <div class="article-header">
     <h1>Project One</h1>
     <div class="meta">Jan 2026</div>
@@ -41,7 +42,7 @@
   </div>
 </div>
 
-<footer>© 2026 Your Name</footer>
+<footer>© 2026 Lucas Noormamode</footer>
 
 </body>
 </html>
