fixed github link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container nav-inner">
     <a href="index.html" class="logo">Lucas Noormamode</a>
     <div class="nav-links">
-      <a href="https://github.com/LSNoor/lsnoor.github.io" target="_blank">GitHub</a>
+      <a href="https://github.com/LSNoor/" target="_blank">GitHub</a>
       <a href="mailto:lucnoor@gmail.com">Contact</a>
     </div>
   </div>
